# HomaModule

./: .gitignore  INSTALL.md  Kconfig  Makefile  Makefile.upstream  README.md  RHEL_9.5_changes_note.md  UDP_HIJACK.md  balance.txt  homa.c  homa.h  homa_api.c  homa_devel.c  homa_devel.h  homa_grant.c  homa_grant.h  homa_hijack.c  homa_hijack.h  homa_impl.h  homa_incoming.c  homa_input.c  homa_interest.c  homa_interest.h  homa_ioctl_bench.c  homa_lcache.h  homa_metrics.c  homa_metrics.h  homa_offload.c  homa_offload.h  homa_outgoing.c  homa_output.c  homa_pacer.c  homa_pacer.h  homa_peer.c  homa_peer.h  homa_peer_old.c  homa_peertab.c  homa_plumbing.c  homa_pool.c  homa_pool.h  (+25 more)
cloudlab/: README.md  bash_profile  bashrc  config_switch  dell_switch.txt  gdbinit  setup  update
cloudlab/docker/linux-4.18.0/: Dockerfile  start
dissector/: CMakeLists.txt  README.md  homa.c
man/: Makefile  homa.7  homa_abort.3  homa_invoke.3  homa_recv.3  homa_reply.3  homa_send.3  recvmsg.2  sendmsg.2
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
perf/: README.md  plot_length_cdf.py  plot_slowdown.py  rtt.xlsx
test/: Makefile  README.md  ccutils.cc  ccutils.h  kselftest_harness.h  main.c  mock.c  mock.h  rbtree.c  rbtree_augmented.h  rhashtable.c  unit_homa_grant.c  unit_homa_hijack.c  unit_homa_incoming.c  unit_homa_interest.c  unit_homa_lcache.c  unit_homa_metrics.c  unit_homa_offload.c  unit_homa_outgoing.c  unit_homa_pacer.c  unit_homa_peer.c  unit_homa_peertab.c  unit_homa_plumbing.c  unit_homa_pool.c  unit_homa_qdisc.c  unit_homa_rpc.c  unit_homa_skb.c  unit_homa_sock.c  unit_homa_socktab.c  unit_homa_timer.c  unit_homa_utils.c  unit_timetrace.c  utils.c  utils.h
tests/: Makefile  bufferClient.c  bufferServer.c  buffer_client.c  buffer_server.c  diff_metrics.py  getTimeTrace.c  get_time_trace.c  homaSend.c  homaServer.c  homaTest.cc  homa_server.c  homa_test.cc  receiveRaw.c  scratch.c  sendMany  sendRaw.c  send_raw.c  testTimeTrace.c  test_utils.c  test_utils.h  useMemory.c  use_memory.c
unit/: Makefile  ccutils.cc  ccutils.h  kselftest_harness.h  main.c  mock.c  mock.h  unit_homa_incoming.c  unit_homa_input.c  unit_homa_outgoing.c  unit_homa_output.c  unit_homa_peertab.c  unit_homa_plumbing.c  unit_homa_socktab.c  unit_homa_timer.c  unit_homa_utils.c  unit_mock.c  utils.c  utils.h
util/: Makefile  README.md  avg.py  buffer_client.c  buffer_server.c  cp_basic  cp_both  cp_buffers  cp_client_threads  cp_config  cp_config_buf  cp_load  cp_mtu  cp_node.cc  cp_prios  cp_server_ports  cp_tcp  cp_tcp_config  cp_vs_load  cp_vs_tcp  cperf  cperf.py  diff_metrics.py  diff_rtts.py  dist.cc  dist.h  dist_test.cc  dist_to_proto.cc  get_time_trace.c  get_traces  homa_prio.cc  homa_server.c  homa_test.cc  inc_tput.cc  metrics.py  plot.py  plot_tthoma.py  receive_raw.c  rpcid.py  scratch.c  (+39 more)
